--- a/dr_libphonenumber/example/web/index.html
+++ b/dr_libphonenumber/example/web/index.html
@@ -27,6 +27,8 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+<script src="https://cdn.jsdelivr.net/npm/google-libphonenumber@3.2.19/dist/libphonenumber.min.js"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
